Welcome screen, Help menu, and SMS sendig functionality

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="5dp"
     tools:context="com.codefupanda.app.swish.MainActivity"
+    android:focusableInTouchMode="true"
     tools:ignore="MergeRootFrame">
 
     <!-- ListView Containt -->
+	
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_launcher" />
 
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:visibility="invisible" >
+    </ListView>
+    
+     <Button
+        android:id="@+id/swishButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="@string/swish"
+        android:visibility="invisible" 
+        android:text="@string/swish" />
+</RelativeLayout>
