--- a/res/menu/main_activity_actions.xml
+++ b/res/menu/main_activity_actions.xml
@@ -3,13 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.codefupanda.app.swish.MainActivity" >
 
-    <item android:id="@+id/action_search"
-          android:icon="@drawable/abc_ic_ab_back_holo_dark"
-          android:title="@string/app_name"
-          android:showAsAction="ifRoom" />
-    
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
+          android:showAsAction="never" />
+    <item android:id="@+id/action_help"
+          android:title="@string/action_help"
           android:showAsAction="never" />
 </menu>
