--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -23,7 +23,7 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/date_of_birth"
+        android:id="@+id/phone_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/name"
